feat: delete useless commend
