# app.js
@@ -22,10 +22,10 @@ app.use(passport.initialize())
 app.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerFile))
 
 // 為了測試路由所設定
-app.get('/test', (req, res) => {
-  console.log('-------------- /test ------------ ')
-  res.status(200).json('成功')
-})
+// app.get('/test', (req, res) => {
+//   console.log('-------------- /test ------------ ')
+//   res.status(200).json('成功')
+// })
 
 app.use(routes)
 
