# swagger_output.json
@@ -16,17 +16,6 @@
     }
   ],
   "paths": {
-    "/test": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/users/signup": {
       "post": {
         "tags": [
@@ -119,20 +108,6 @@
                 "password": "123"
               }
             }
-          }
-        }
-      }
-    },
-    "/api/index": {
-      "get": {
-        "tags": [
-          "Index"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
           }
         }
       }
